[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eer"
version = "0.0.1"
authors = [
  { name="David van Leeuwen", email="david.vanleeuwen@gmail.com" },
]
description = "Python package to compute the Equal Error Rate, wrapping PYLLR"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "matplotlib", "numpy", "scipy", "scikit-learn", "git+https://github.com/bsxfan/PYLLR.git" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/davidavidav/eer.py"
"Bug Tracker" = "https://github.com/davidavdav/eer.py/issues"
